--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "grunt": "^1.0.1",
     "mocha": "^2.4.5",
     "webpack": "^1.12.14"
+  },
+  "dependencies": {
+    "webpack": "^1.13.1"
   }
 }
